1998-04-16  Stephan Kulow  <coolo@kde.org>

	* configure.in: added test for utmp file 

	* acinclude.m4.in: made --without-pam default
	

1998-04-06  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: don't test compiling, linking, running in
	one step. This proved to be too dangerous for my mail box.
	
1998-03-21  Stephan Kulow  <coolo@kde.org>

	* libtool.m4.in: created some new macros to work around this 
	ugly (because long) help of configure --enable-shared/static

1998-03-05  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: set language to C++ before trying the ksize_t 
	test

	* configure.in: sorted the Makefile entries alphabeticly (and all 
	together: we love xemacs! we love xemacs! ;)
	
	* configure.in: added sk 

	* acinclude.m4.in: substitute x_libraries to fix the empty -rpath
	
1998-03-03  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: add a rpath for every shared library, that is 
	linked too (especially X11 libraries)
	
Tue Feb 24 22:04:59 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: added kde_sounddir and set kde_minidir to
	kde_icondir/mini to break not too much

Sun Feb 15 18:25:50 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: added bugfix by Bob Miller <kbob@engr.sgi.com>
	(correct reset of IFS)
	
Wed Feb 11 00:53:11 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: made shadow under Linux default, since the
	binaries will work also under non-shadow systems. The only problem 
	left is PAM, so I disabled shadow in case, PAM is present

Tue Feb 10 16:46:32 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: added test for nice to find out, if the option
	-nice works for the screensavers

	* acinclude.m4.in: port to LynxOS. For this I moved all library
	search routines in KDE_MISC_TESTS, so I don't need to write this
	in every package

	* README: some grammar fixes

	* acinclude.m4.in: search for the libs in the exec_prefix, when
	it's present
	
Sun Feb  8 14:07:23 1998  Stephan Kulow  <coolo@kde.org>
