@@ -1202,18 +1202,41 @@ dnl Check for the type of the third argument of getsockname
 AC_DEFUN(AC_CHECK_KSIZE_T,
 [AC_MSG_CHECKING(for the third argument of getsockname)  
 AC_LANG_CPLUSPLUS
-AC_CACHE_VAL(ac_cv_ksize_t_int,
-[AC_TRY_COMPILE([#include <sys/types.h>
-#include <sys/socket.h>],[int a=0; getsockname(0,(struct sockaddr*)0, &a);],
-eval "ac_cv_ksize_t_int=yes",
-eval "ac_cv_ksize_t_int=no")])
-if eval "test \"`echo `$ac_cv_ksize_t_int\" = yes"; then
-  AC_MSG_RESULT(int)
-  AC_DEFINE(ksize_t, int)
-else
-  AC_MSG_RESULT(size_t)
-  AC_DEFINE(ksize_t, size_t)
+AC_CACHE_VAL(ac_cv_ksize_t,
+[AC_TRY_COMPILE([
+#include <sys/types.h>
+#include <sys/socket.h>
+],[
+socklen_t a=0; 
+getsockname(0,(struct sockaddr*)0, &a);
+],
+ac_cv_ksize_t=socklen,
+ac_cv_ksize_t=)
+if test -z "$ac_cv_ksize_t"; then
+ac_safe_cxxflags="$CXXFLAGS"
+if test "$GCC" = "yes"; then
+  CXXFLAGS="-Werror $CXXFLAGS"
 fi
+AC_TRY_COMPILE([
+#include <sys/types.h>
+#include <sys/socket.h>
+],[
+int a=0; 
+getsockname(0,(struct sockaddr*)0, &a);
+],
+ac_cv_ksize_t=int,
+ac_cv_ksize_t=size_t)
+CXXFLAGS=$ac_safe_cxxflags
+fi
+])
+
+if test -z "$ac_cv_ksize_t"; then
+  ac_cv_ksize_t=int
+fi
+
+AC_MSG_RESULT($ac_cv_ksize_t)
+AC_DEFINE_UNQUOTED(ksize_t, $ac_cv_ksize_t)
+
 ])
 
 
